tests/snapshots/examples_fixtures/functions__closure_outer_assign_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/closure_outer_assign_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E003]: Outer Assignment

Cannot assign to variable `x` from outer scope.

  examples/functions/closure_outer_assign_error.flx:6:9
  |
6 |         x = 2;
  |         ^^^^^^

Hint:
  Variables captured by closures cannot be reassigned. Return the updated value from the function or bind it to a new name.
== stdout ==
<not executed>
